--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,9 +50,9 @@ include(cmake/doxygen.cmake)
 include(CheckCXXCompilerFlag)
 check_cxx_compiler_flag("-std=c++11" COMPILER_SUPPORTS_CXX11)
 if(COMPILER_SUPPORTS_CXX11)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
 elseif(COMPILER_SUPPORTS_CXX0X)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -O3")
 else()
   message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
 endif()
@@ -240,4 +240,9 @@ target_link_libraries(${SIMULATION_TARGET} biodynamo)
 # --------------------- build octree benchmark executable ---------------------
 set(OCTREE_TARGET octree_bench)
 add_executable(${OCTREE_TARGET} ${CMAKE_SOURCE_DIR}/demo/octree_bench.cc)
+target_link_libraries(${OCTREE_TARGET} biodynamo ${PCL_COMMON_LIBRARIES} ${PCL_OCTREE_LIBRARIES})
+
+# --------------------- build octree benchmark executable ---------------------
+set(OCTREE_TARGET kdtree_bench)
+add_executable(${OCTREE_TARGET} ${CMAKE_SOURCE_DIR}/demo/kdtree_bench.cc)
 target_link_libraries(${OCTREE_TARGET} biodynamo ${PCL_COMMON_LIBRARIES} ${PCL_OCTREE_LIBRARIES})
